# SpaHybGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
assets/: environment.yml  requirements.txt
assets/observations/: scene_010_ann_0124_tsdf.npz  scene_010_ann_0124_voxel.npz
config/: grasp_generation.yaml
handmodel/: hand_infos.json
handmodel/properties/: contact_allegro_hand.json  contact_antipodal_hand.json  contact_antipodal_model_lite.json  contact_barrett_hand.json  contact_brunelhand.json  contact_finray2f.json  contact_finray3f.json  contact_finray4f.json  contact_leaphand.json  contact_nano_hand.json  contact_robotiq2f.json  contact_robotiq3f.json  (+2 more)
handmodel/urdf/nano_hand/: CMakeLists.txt  package.xml
handmodel/urdf/nano_hand/config/: joint_names_nano_hand.yaml
handmodel/urdf/nano_hand/launch/: display.launch  gazebo.launch
handmodel/urdf/nano_hand/meshes/: finger_1_1_link.STL  finger_1_2_link.STL  finger_1_3_link.STL  finger_1_4_link.STL  finger_2_1_link.STL  finger_2_2_link.STL  finger_2_3_link.STL  finger_2_4_link.STL  finger_3_1_link.STL  finger_3_2_link.STL  finger_3_3_link.STL  finger_3_4_link.STL  finger_4_1_link.STL  finger_4_2_link.STL  finger_4_3_link.STL  finger_4_4_link.STL  finger_5_1_link.STL  finger_5_2_link.STL  finger_5_3_link.STL  finger_5_4_link.STL  palm_link.STL
handmodel/urdf/nano_hand/urdf/: nano_hand.csv  nano_hand.urdf
scripts/: contact_inference_test.py  generate_dataset.py  generation_pipeline_test.py  grasp_optimization_test.py  hand_contacts.ipynb  realrobot_execution.py  train_shgn.py
(+90 files in other folders)
